Bug 255274 - Layout Mode Usability: transparent plots
Summary: Layout Mode Usability: transparent plots
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.1
Platform: Unlisted Binaries All
: NOR normal
Target Milestone: ---
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-10-26 00:43 UTC by Peter Kümmel
Modified: 2011-05-27 22:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Kümmel 2010-10-26 00:43:51 UTC
Version:           2.0.1
OS:                All

pIsn't a transparent plot-background better for arranging lots?

Reproducible: Didn't try
Comment 1 Nicolas Brisset 2010-10-26 09:18:07 UTC
I'm not sure I understand exactly what you mean. But when moving objects in layout mode, I think it would be nice to have (at least as an option) only the outline or a transparent background, so as to see what is below. It shouldn't be too heavy on resource, but layout mode is not the mode in which performance is critical. 
I don't know, but maybe updates are even disabled when in layout mode?
Comment 2 Peter Kümmel 2010-10-26 21:04:26 UTC
I mean that the plots could overlap even in non-layout mode.
Comment 3 Nicolas Brisset 2010-10-29 00:30:21 UTC
I have just realized that it is already possible to have transparent plots:
Edit plot dialog -> Appearance -> Fill -> Style: NoBrush

I suspect that is enough. From experience and a few quick tests I believe much more in insets (plots completely contained in another plot in an area where there is nothing) than transparent plots. Having the above option for transparent plots is probably enough.

Opinions?
Comment 4 Netterfield 2011-04-11 14:39:58 UTC
Peter's point here is that plot placement is hard in layout mode because:
i) the plot is opaque, so you can't see what is behind it
ii) there is no border on the plot while dragging, so you can't tell where the edges are (ok, ok, Peter didn't mention the second point, but I'll declare it implied...)

So, the proposal is: make layout mode easier to use by
i) make plots temporarily transparent while dragging
ii) draw borders around all plots in the view
Comment 5 Netterfield 2011-05-20 18:50:14 UTC
SVN commit 1232866 by netterfield:

CCBUG: 254922
BUG: 255274

Draw lines around all objects in layout mode, so the boundries are obvious.
  -The bug suggested that the plot be made fully transparent, but dragging with the boundry clear
  seems to solve the problem, at least for me.  It would be easy to make the plots transparent, so
  the bug can be re-opened if people want more discussion about it.

Allow for rotated plots to be dragged and dropped in layout mode.
  -Dragging rotated plots which have been resized after rotation still have issues which I haven't
  been able to track down.




 M  +7 -1      plotitem.cpp  
 M  +4 -1      scene.cpp  
 M  +43 -5     viewitem.cpp  
 M  +1 -0      viewitem.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1232866
Comment 6 Nicolas Brisset 2011-05-26 22:02:32 UTC
Reopening...

If it's easy to make the plot outline transparent during drag, then I'd like it to be the case. Right now dragging a plot from one tab to another one is quite difficult (and users are not very likely to guess that it's even possible, we had the case already), as you only switch tabs when the mouse pointer hovers above the new tab, but you don't see the pointer during the movement as it is hidden by the plot. The best chance you have is to click close to the top edge of the plot before starting the drag, which is not what people do spontaneously.

Another small point is that I have the feeling that there is a pretty large lag during the drag operation. It seems to be a performance issue, as if something that should be cached were being recomputed all the time.
Comment 7 Netterfield 2011-05-27 22:08:36 UTC
SVN commit 1233808 by netterfield:

BUG: 255274

View Items are transparent during a drag so you can see where you are putting them.



 M  +1 -1      plotitem.cpp  
 M  +4 -1      viewitem.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1233808