BUG: 255274

View Items are transparent during a drag so you can see where you are putting them.



git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1233808 283d02a7-25f6-0310-bc7c-ecb5cbfe19da